--- a/dev_portfolio/sass/elements/_elements.scss
+++ b/dev_portfolio/sass/elements/_elements.scss
@@ -4,7 +4,8 @@ html {
 
 *,
 *:before,
-*:after { /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
+*:after {
+	/* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
 	box-sizing: inherit;
 }
 
@@ -19,7 +20,7 @@ hr {
 	margin-bottom: 1.5em;
 }
 
-@import "lists";
+@import 'lists';
 
 img {
 	height: auto; /* Make sure images are scaled correctly. */
@@ -30,4 +31,6 @@ figure {
 	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
 }
 
-@import "tables";
+@import 'tables';
+
+@import 'splashScreen';
