--- a/dev_portfolio/sass/style.scss
+++ b/dev_portfolio/sass/style.scss
@@ -20,6 +20,8 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
+@import 'abstracts/abstracts';
+
 @import 'base/base';
 
 @import 'components/components';
