small layout fixes

--- a/dev_portfolio/sass/components/_splashScreen.scss
+++ b/dev_portfolio/sass/components/_splashScreen.scss
@@ -6,40 +6,42 @@
 	width: 100vw;
 	top: 0;
 	left: 0;
+	transition: opacity $medium $medium;
+
+	&.onClose {
+		opacity: 0;
+	}
 
 	&__background {
 		@include absoluteCenter;
 		background: linear-gradient(270deg, $red, darken($yellow, 25%), $blue, $green);
 		background-size: 600% 600%;
 		border-radius: 50%;
-		animation: bgAppear 0.5s ease forwards, bgGradient 20s ease infinite;
-		display: flex;
-		flex-direction: column;
+		animation: bgAppear $medium ease forwards, bgGradient 20s ease infinite;
+		display: grid;
+		grid-row-gap: 3rem;
 		justify-content: center;
-		align-items: center;
+		align-content: center;
+		justify-items: center;
 
 		&::before {
 			@include absoluteCenter;
-
-			height: 20vw;
-			width: 20vw;
-			min-width: 20rem;
-			min-height: 20rem;
-			border-radius: 50%;
 			content: '';
-			background-color: transparent;
-			border: 0.2rem solid white;
-			z-index: -1;
-			transition: all 0.5s;
+			transition: all $medium;
+			width: 0;
+			height: 0;
+			border-radius: 50%;
 		}
 
-		&.hover::before {
-			animation: onHover 0.5s ease-out infinite;
+		&.onClose::before {
+			height: 100vh;
+			width: 100vw;
+			border-radius: 0;
+			background-color: black;
 		}
 	}
 
-	&__content {
-		@include absoluteCenter;
+	&__circle {
 		height: 20vw;
 		width: 20vw;
 		min-width: 20rem;
@@ -50,58 +52,72 @@
 		justify-content: center;
 		align-items: center;
 		cursor: pointer;
-		transition: all 0.3s;
+		transition: all $fast;
 		box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+		transition: all $fast;
 
-		&.onClose {
-			height: 100vh;
-			width: 100vw;
-			border-radius: 0;
-			background-color: $dark;
+		&:active {
+			transform: translateY(-1rem);
+		}
+
+		&::before {
+			position: absolute;
+			height: 20vw;
+			width: 20vw;
+			min-width: 20rem;
+			min-height: 20rem;
+			border-radius: 50%;
+			content: '';
+			background-color: transparent;
+			border: 0.2rem solid $light;
+			z-index: -1;
+			transition: all $medium;
+		}
+
+		&:hover::before {
+			animation: onHover $medium ease-out infinite;
 		}
 	}
 
 	&__image {
-		width: 75%;
+		width: 50%;
 		min-width: 15rem;
 		min-height: 15rem;
-		transition: all 0.3s;
+		transition: all $fast;
 		position: relative;
 		transform-origin: center center;
-		animation: chibiAppear 1s 0.3s backwards;
+		animation: chibiAppear $verySlow $fast backwards;
 
 		&.onClose {
-			animation: chibiDisappear 1s 0.1s backwards;
+			animation: chibiDisappear $verySlow $fast backwards;
 		}
 	}
 
 	&__text {
 		z-index: 1;
-		position: relative;
-		top: 30vh;
-		display: grid;
-		width: 30vw;
-
-		grid-template-columns: repeat(3, 1fr);
-		justify-content: space-between;
-		justify-items: center;
+		display: flex;
+		justify-content: center;
 		color: $light;
 		font-family: $fontHeading;
+		font-size: 2.5rem;
 		text-transform: lowercase;
-		transition: all 0.2s;
+		transition: all $fast;
+
+		& > * {
+			&:not(:last-child) {
+				margin-right: 3rem;
+			}
+		}
 
 		&.onClose {
-			animation: disappear 0.1s forwards;
+			animation: disappear $fast forwards;
 		}
 	}
 
 	&__tooltip {
-		position: absolute;
-		top: 15%;
-		left: 50%;
-		transform: translateX(-50%);
-		animation: appear 0.3s 3s backwards, moveUpAndDown 0.5s 3s infinite;
-		transition: all 0.3s;
+		animation: appear $fast 2s backwards, moveUpAndDown $medium 2s infinite;
+		transition: all $fast;
+		width: 60%;
 		&.onClose {
 			opacity: 0;
 		}
@@ -133,14 +149,14 @@
 
 @keyframes moveUpAndDown {
 	0% {
-		transform: translate(-50%, 0);
+		transform: translateY(0);
 	}
 
 	50% {
-		transform: translate(-50%, -0.5rem);
+		transform: translateY(-0.5rem);
 	}
 	100% {
-		transform: translate(-50%, 0);
+		transform: translateY(0);
 	}
 }
 
@@ -170,18 +186,18 @@
 
 @keyframes onHover {
 	0% {
-		transform: translate(-50%, -50%) scale(1);
+		transform: scale(1);
 		opacity: 0;
 	}
 	50% {
-		transform: translate(-50%, -50%) scale(1.3);
+		transform: scale(1.3);
 		opacity: 0.3;
 	}
 	70% {
 		opacity: 0.2;
 	}
 	100% {
-		transform: translate(-50%, -50%) scale(1.5);
+		transform: scale(1.5);
 		opacity: 0;
 	}
 }
@@ -189,7 +205,7 @@
 @keyframes chibiAppear {
 	0% {
 		transform: rotate(-360deg);
-		top: -15rem;
+		top: -25rem;
 		opacity: 0;
 	}
 	100% {
@@ -205,7 +221,7 @@
 		opacity: 1;
 	}
 	100% {
-		top: 15rem;
+		top: 25rem;
 		transform: rotate(360deg);
 		opacity: 0;
 	}
