--- a/dev_portfolio/sass/base/_base.scss
+++ b/dev_portfolio/sass/base/_base.scss
@@ -10,6 +10,7 @@ html {
 	box-sizing: border-box;
 	font-size: 62.5%; // 1 rem = 1 px;
 	background-color: $dark;
+	font-family: $fontDefault, serif;
 }
 
 body {
