--- a/dev_portfolio/sass/components/_tooltip.scss
+++ b/dev_portfolio/sass/components/_tooltip.scss
@@ -6,6 +6,8 @@ $borderWidth: 1rem;
 	color: $dark;
 	padding: 1rem 2rem;
 	border-radius: 0.3rem;
+	text-align: center;
+	text-transform: lowercase;
 
 	&::after {
 		position: absolute;
