--- a/dev_portfolio/sass/abstracts/_colors.scss
+++ b/dev_portfolio/sass/abstracts/_colors.scss
@@ -1,6 +1,7 @@
-$blue: #7b83ff;
+$blue: #3d4394;
 $green: #8fba71;
 $red: #d5714e;
 $yellow: #f6db41;
 $dark: #252525;
 $light: #e9e9e9;
+$darkGrey: #353634;
