--- a/dev_portfolio/sass/components/_projectGallery.scss
+++ b/dev_portfolio/sass/components/_projectGallery.scss
@@ -1,7 +1,7 @@
 .projectGallery {
 	&__projects {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 		grid-column-gap: 2.5rem;
 		grid-row-gap: 3rem;
 	}
@@ -10,27 +10,41 @@
 		box-shadow: 0 2rem 2rem rgba($dark, 0.2);
 		padding: 1rem 1rem;
 		min-height: 45rem;
+		border-radius: 1rem;
+		overflow: hidden;
 
 		&Back {
 			position: absolute;
 			background-color: $red;
 			color: $light;
 			padding: 1rem 1rem;
-			top: 100%;
+			top: 0%;
 			left: 0;
 			width: 100%;
-			height: 0%;
-
-			overflow: hidden;
+			height: 100%;
 			display: flex;
+			visibility: hidden;
 			flex-direction: column;
+			opacity: 0;
+			transition: all $fast;
 
 			&.show {
-				top: 0;
-				height: 100%;
+				opacity: 1;
+				visibility: visible;
 			}
 		}
-
+		&CloseButton {
+			top: 2rem;
+			right: 2rem;
+			background-color: $light;
+			&::after {
+				background-color: $light;
+			}
+			&:hover,
+			&:hover::after {
+				background-color: $dark;
+			}
+		}
 		&HighlightsList {
 			padding-left: 2rem;
 			margin-bottom: auto;
@@ -59,9 +73,15 @@
 			font-size: 2rem;
 		}
 
+		&Menu {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+		}
+
 		&MenuButton {
-			position: relative;
-			justify-self: end;
 			background-color: $green;
 			border-radius: 50%;
 			height: 0.4rem;
