--- a/dev_portfolio/sass/components/_projectGallery.scss
+++ b/dev_portfolio/sass/components/_projectGallery.scss
@@ -1,4 +1,6 @@
 .projectGallery {
+	padding: 7rem 5rem;
+
 	&__projects {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
