--- a/dev_portfolio/sass/pages/front-page/front-page.scss
+++ b/dev_portfolio/sass/pages/front-page/front-page.scss
@@ -1,2 +1,3 @@
-@import 'front-page-splash.scss';
-@import 'front-page-intro.scss';
+@import 'front-page-splash';
+@import 'front-page-intro';
+@import 'front-page-contact';
