add button to switch code tooltips on/off

--- a/dev_portfolio/sass/abstracts/_abstracts.scss
+++ b/dev_portfolio/sass/abstracts/_abstracts.scss
@@ -1,6 +1,7 @@
 @import 'animations';
 @import 'colors';
-@import 'typography';
 @import 'helpers';
+@import 'layers';
 @import 'mixins';
 @import 'time';
+@import 'typography';
