--- a/dev_portfolio/sass/components/_codeModal.scss
+++ b/dev_portfolio/sass/components/_codeModal.scss
@@ -6,7 +6,7 @@
 	height: 100vh;
 	width: 100vw;
 	background-color: rgba($dark, 0.5);
-	z-index: 1000;
+	z-index: $zindexModal;
 	display: flex;
 	justify-content: center;
 	align-items: center;
