--- a/dev_portfolio/sass/pages/front-page/front-page-splash.scss
+++ b/dev_portfolio/sass/pages/front-page/front-page-splash.scss
@@ -1,6 +1,6 @@
 .splashScreen {
 	position: fixed;
-	z-index: 1000;
+	z-index: $zindexSplash;
 	background-color: $light;
 	height: 100vh;
 	width: 100vw;
