--- a/dev_portfolio/sass/components/_tooltip.scss
+++ b/dev_portfolio/sass/components/_tooltip.scss
@@ -7,6 +7,7 @@ $borderWidth: 1rem;
 	border-radius: 0.3rem;
 	text-align: center;
 	text-transform: lowercase;
+
 	&::after {
 		position: absolute;
 		content: '';
@@ -165,5 +166,15 @@ $borderWidth: 1rem;
 				border-top: $borderWidth solid $dark;
 			}
 		}
+	}
+}
+
+.code__tooltip {
+	opacity: 0;
+	visibility: hidden;
+	transition: all $fast;
+	&.active {
+		opacity: 1;
+		visibility: visible;
 	}
 }
