--- a/dev_portfolio/sass/pages/front-page/front-page-intro.scss
+++ b/dev_portfolio/sass/pages/front-page/front-page-intro.scss
@@ -1,12 +1,18 @@
 .intro {
-	display: grid;
-	width: 100%;
-	height: 90vh;
-	align-content: center;
-	background-color: $dark;
-	color: $light;
-	padding: 0 5rem;
-	position: relative;
+	&__section {
+		width: 100%;
+		height: 90vh;
+		background-color: $dark;
+		color: $light;
+	}
+
+	&__container {
+		height: 100%;
+		display: grid;
+		align-content: center;
+		padding: 0 5rem;
+		position: relative;
+	}
 
 	&__header {
 		font-size: 10rem;
