--- a/dev_portfolio/sass/pages/front-page/front-page-splash.scss
+++ b/dev_portfolio/sass/pages/front-page/front-page-splash.scss
@@ -122,6 +122,12 @@
 			opacity: 0;
 		}
 	}
+
+	&__backgroundCodeTooltip {
+		position: absolute;
+		top: 20rem;
+		left: 20rem;
+	}
 }
 
 @keyframes moveUpAndDown {
