--- a/dev_portfolio/sass/components/_tooltip.scss
+++ b/dev_portfolio/sass/components/_tooltip.scss
@@ -173,6 +173,7 @@ $borderWidth: 1rem;
 	opacity: 0;
 	visibility: hidden;
 	transition: all $fast;
+	cursor: pointer;
 	&.active {
 		opacity: 1;
 		visibility: visible;
