add code tooltips

--- a/dev_portfolio/sass/pages/front-page/front-page-gallery.scss
+++ b/dev_portfolio/sass/pages/front-page/front-page-gallery.scss
@@ -2,4 +2,14 @@
 	&__section {
 		padding-bottom: 10rem;
 	}
+
+	&__container {
+		position: relative;
+	}
+
+	&__tooltip {
+		position: absolute;
+		top: 50%;
+		left: 100%;
+	}
 }
