--- a/dev_portfolio/sass/components/_tooltip.scss
+++ b/dev_portfolio/sass/components/_tooltip.scss
@@ -174,6 +174,7 @@ $borderWidth: 1rem;
 	visibility: hidden;
 	transition: all $fast;
 	cursor: pointer;
+	display: none;
 	&.active {
 		opacity: 1;
 		visibility: visible;
