--- a/dev_portfolio/sass/components/_projectGallery.scss
+++ b/dev_portfolio/sass/components/_projectGallery.scss
@@ -49,16 +49,21 @@
 		&HighlightsList {
 			padding-left: 2rem;
 			margin-bottom: auto;
+			li {
+				&:not(:last-child) {
+					margin-bottom: 1.5rem;
+				}
+			}
 		}
 
 		&Links {
 			svg {
 				fill: $light;
-				height: 5rem;
-				width: 5rem;
+				height: 3rem;
+				width: 3rem;
 
 				&:hover {
-					fill: $blue;
+					fill: $yellow;
 				}
 			}
 		}
@@ -80,6 +85,7 @@
 			display: flex;
 			justify-content: flex-end;
 			align-items: center;
+			cursor: pointer;
 		}
 
 		&MenuButton {
