--- a/dev_portfolio/sass/components/_tooltip.scss
+++ b/dev_portfolio/sass/components/_tooltip.scss
@@ -178,5 +178,8 @@ $borderWidth: 1rem;
 	&.active {
 		opacity: 1;
 		visibility: visible;
+		@include manageStylesFor(medium) {
+			display: none !important;
+		}
 	}
 }
