--- a/dev_portfolio/sass/pages/front-page/front-page-tooltipButton.scss
+++ b/dev_portfolio/sass/pages/front-page/front-page-tooltipButton.scss
@@ -6,6 +6,10 @@
 		z-index: $zindexOverlay;
 		display: flex;
 		visibility: hidden;
+
+		@include manageStylesFor(medium) {
+			display: none;
+		}
 	}
 
 	&__codeTooltip {
