--- a/dev_portfolio/sass/components/_projectGallery.scss
+++ b/dev_portfolio/sass/components/_projectGallery.scss
@@ -18,6 +18,8 @@
 			background-color: $red;
 			color: $light;
 			padding: 1rem 1rem;
+			border-radius: 1rem;
+
 			top: 0%;
 			left: 0;
 			width: 100%;
