--- a/dev_portfolio/sass/components/_projectGallery.scss
+++ b/dev_portfolio/sass/components/_projectGallery.scss
@@ -115,7 +115,10 @@
 
 		&Image {
 			display: block;
-			max-width: 100%;
+			width: 100%;
+			height: 20rem;
+
+			object-fit: cover;
 			border-radius: 0.5rem;
 		}
 	}
